--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <section class="jumbotron text-center">
       <img src="img/tama.jpg" alt="Arief Pratama" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Muhammad Arief Pratama</h1>
-      <p class="lead">Programmer | Barista</p>
+      <p class="lead"></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#fff"
@@ -195,6 +195,16 @@
     <!-- akhir footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/TextPlugin.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
+    <script>
+      gsap.registerPlugin(TextPlugin);
+      gsap.to(".lead", { duration: 1.5, delay: 1, text: "Programmer | Barista" });
+      gsap.from(".jumbotron img", { duration: 1, y: -100, opacity: 0, ease: "baunce", delay: 0.5 });
+      gsap.from(".navbar", { duration: 1.5, y: -100, opacity: 0, ease: "baunce" });
+      gsap.from(".display-4", { duation: 1, y: -100, opacity: 0, ease: "baunce" });
+    </script>
 
     <script>
       const scriptURL = "https://script.google.com/macros/s/AKfycbyAqFh81bCVpJcLMP1hlpfFAkgYIIyaYCvRSfq4NtpqvMzpxaLStD0-hVTNdLuPItcI2g/exec";
