mengganti profile, tulisan

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <!-- Jumbotron -->
     <section class="jumbotron text-center">
-      <img src="img/tama.jpg" alt="Arief Pratama" width="200" class="rounded-circle img-thumbnail" />
+      <img src="img/profile.jpeg" alt="Arief Pratama" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Muhammad Arief Pratama</h1>
       <p class="lead"></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
@@ -200,7 +200,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
     <script>
       gsap.registerPlugin(TextPlugin);
-      gsap.to(".lead", { duration: 1.5, delay: 1, text: "Programmer | Barista" });
+      gsap.to(".lead", { duration: 1.5, delay: 1, text: "Programmer | Coffee Enthusiast" });
       gsap.from(".jumbotron img", { duration: 1, y: -100, opacity: 0, ease: "baunce", delay: 0.5 });
       gsap.from(".navbar", { duration: 1.5, y: -100, opacity: 0, ease: "baunce" });
       gsap.from(".display-4", { duation: 1, y: -100, opacity: 0, ease: "baunce" });
