menambahkancard title,resize gambar card

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             <div class="card">
               <img src="img/koding.jpg" class="card-img-top" alt="koding" />
               <div class="card-body">
+                <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
@@ -100,6 +101,7 @@
             <div class="card">
               <img src="img/barista.jpg" class="card-img-top" alt="barista" />
               <div class="card-body">
+                <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
@@ -108,6 +110,7 @@
             <div class="card">
               <img src="img/olahraga.jpg" class="card-img-top" alt="olahraga" />
               <div class="card-body">
+                <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
@@ -116,6 +119,7 @@
             <div class="card">
               <img src="img/belajar.jpg" class="card-img-top" alt="olahraga" />
               <div class="card-body">
+                <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
@@ -124,6 +128,7 @@
             <div class="card">
               <img src="img/konsultan.jpg" class="card-img-top" alt="olahraga" />
               <div class="card-body">
+                <h5 class="card-title">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
